--- a/StarterTCC/TCCApp/templates/dashboard/home.html
+++ b/StarterTCC/TCCApp/templates/dashboard/home.html
@@ -1,39 +1,38 @@
-{% extends 'main.html' %}
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> HomePage </title>
+    <title> Página de Perfil </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 
 {% block content %}
 
-    {% if request.user.is_autenticated%}
+    {% if request.user.is_authenticated %}
         <body>
             <section class="hero is-link is-fullheight">
-              <div class="hero-body">
-                <p class="title">
-                  Seja Bem-Vindo, {{ user.get_username }}!
-                </p>
-                <p class="subtitle">
-                  Você poderá usufruir do Estúdio, a partir daqui!
-                </p>
+              <div class="section is-large">
+                <h1 class="title"> Seja Bem-Vindo,  <span class="has-text-warning">{{ user.username }}</span>! </h1>
+                <h2 class="subtitle"> Você poderá usufruir do Estúdio, a partir daqui!</h2>
+                <a type="button" class="button is-alert is-hovered" href="/perfil/"> Editar Perfil </a>
+                <a type="button" class="button is-danger is-hovered" href="/logouts/"> Logout </a>
               </div>
             </section>
         </body>
+
     {% else %}
         <body>
             <section class="hero is-danger is-fullheight">
               <div class="hero-body">
-                <p class="title">
+                <h1 class="title">
                   Usuário Desconhecido :/
-                </p>
+                </h1>
                 <p class="subtitle">
                   Você deve <strong>logar</strong> no site para poder usufruir dos benefícios!
                 </p>
               </div>
             </section>
         </body>
+
+    {% endif %}
 {% endblock %}
