--- a/StarterTCC/TCCApp/templates/dashboard/perfil.html
+++ b/StarterTCC/TCCApp/templates/dashboard/perfil.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -6,33 +8,34 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 
+<style>
+    body {
+        background-image: url("https://imgur.com/Sknluph.png");
+    }
+</style>
+
 {% block body %}
 
 {% if request.user.is_authenticated %}
 <body>
-    <section class="hero is-primary is-fullheight">
+    <section class="hero is-fullheight">
         <div class="hero-body">
             <div class="container">
                 <div class="columns is-centered">
-                    <div class="column is-half">
+                    <div class="column is-half is-centered">
                         <form name="form-perfil" id="formChanging" action="/dochanging/" method="post">
-
                                 {% if msg %}
-
                                     <article class="message {{ class }}">
                                          <div class="message-header">
                                             <p> {{msg}} </p>
                                             <a class="delete" aria-label="delete"></a>
                                         </div>
                                     </article>
-
                                 {% endif %}
-
                                 <br> <br>
                                 {% csrf_token %}
-
-                                  <div class="field">
-                                    <label class="label">Senha Anterior:</label>
+                                  <div class="field  is-centered">
+                                    <label class="label has-text-white">Senha Anterior:</label>
                                     <p class="control has-icons-left">
                                         <input class="input" type="password" name="confirmar-senha" id="confirmar-senha" placeholder="Senha">
                                         <span class="icon is-small is-left">
@@ -40,9 +43,8 @@
                                         </span>
                                     </p>
                                   </div>
-
                                   <div class="field">
-                                    <label class="label">Nova Senha:</label>
+                                    <label class="label has-text-white">Nova Senha:</label>
                                     <p class="control has-icons-left">
                                         <input class="input" type="password" name="senha" id="senha" placeholder="Senha">
                                         <span class="icon is-small is-left">
@@ -50,9 +52,8 @@
                                         </span>
                                     </p>
                                   </div>
-
                                   <div class="field">
-                                    <label class="label">Nome: {{ user.first_name }} </label>
+                                    <label class="label has-text-white">Nome: {{ user.first_name }} </label>
                                     <p class="control has-icons-left has-icons-right">
                                       <input class="input" type="text" name="nome" id="nome" placeholder="Insira um Nome">
                                       <span class="icon is-small is-left">
@@ -63,9 +64,8 @@
                                         </span>
                                     </p>
                                   </div>
-
                                   <div class="field">
-                                    <label class="label">Email: {{ user.email }} </label>
+                                    <label class="label has-text-white">Email: {{ user.email }} </label>
                                     <p class="control has-icons-left has-icons-right">
                                       <input class="input" type="text" name="email" id="email" placeholder="Atualize um Email">
                                       <span class="icon is-small is-left">
@@ -79,7 +79,7 @@
                                 <div class="field">
                                     <p class="control">
                                         <button type="submit" class="button is-link is-hovered"> Atualizar </button>
-                                        <a type="button" class="button is-danger is-hovered" href="dashboard/home"> Pagina Inicial </a>
+                                        <a type="button" class="button is-danger is-hovered" href= "{% url 'home' %}" > Pagina Inicial </a>
                                     </p>
                                 </div>
                             </div>
