--- a/StarterTCC/TCCApp/static/css/produto.css
+++ b/StarterTCC/TCCApp/static/css/produto.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
-
-* {
+*{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Kunbh Sans', sans-serif;
 }
 
 body{
-    background-image: url("image/bg-site-v4.png");
+    background-image: url("https://i.imgur.com/DgjKvd7.png");
     background-repeat: repeat-y;
 }
 
@@ -160,102 +160,153 @@ header ul li{
     text-decoration: none;
 }
 
-#chamada p{
-    font-family: 'Montserrat';
-    font-style: normal;
+.container{
+    display: flex;
+    justify-content: center; /*flex-end*/
+    align-items: center;
+    width: 100%;
+    height: calc(100vh - 85px);
+    gap: 7px;
+}
+.left-side{
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+}
+
+.itens{
+    align-self: flex-start;
+}
+
+.select-imge{
+    max-width: 400px;
+}
+
+.select-imge img{
+    width: 100%;
+    border-radius: 9px;
+}
+
+.thumbnails{
+    display: flex;
+    justify-content: space-evenly;
+    max-width: 400px;
+    gap: 7px;
+}
+
+.thumbnail img{
+    width: 100%;
+    border-radius: 10px;
+}
+
+.rigth-side{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.content{
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+
+}
+
+.content h6{
+    color:rgb(255, 225, 52);
+}
+
+.content h1{
+    color: hsl(0, 0%, 100%);
+}
+
+.content p{
+    color: hsl(219, 9%, 55%);
+    font-size: 14px;
+}
+
+.prices{
+    display: flex;
+    flex-direction: column;
+}
+.price{
+    color:rgb(255, 225, 52);
+    font-size: 16px;
     font-weight: 700;
-    font-size: 48px;
-    line-height: 59px;
-    color: white;
-    flex-direction: row;
 }
 
-#texto1{
-    flex-direction: row;
-    gap: 2rem
+.off{
+    font-size: 12px;
+    color:rgb(100, 100, 100);
 }
 
-#chamadatextogrande{
-    justify-content: left;
-    align-items: left;
-    flex-direction: column;
-    margin-top: 15rem;
-    margin-left: 15rem;
+.options{
+    display: flex;
+    gap:7px;
 }
 
-#chamadatextopequeno p{
-    color: #F19334;
-    justify-content: left;
-    align-items: left;
-    flex-direction: column;
-    margin-left: 15rem;
-    font-weight: 600;
-    font-size: 36px;
-    line-height: 40px;
-    width: 665px;
-    height: 48px;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+.amount{
+    display: flex;
+    align-items: center;
+    gap:27px;
+    background-color: hsl(219,9%,45%);
+    padding: 10px, 20px;
+    width: fit-content;
+    border-radius: 10px;
 }
 
-#texto2{
-    top: 25rem;
-    right: 10rem;
-    justify-content: left;
-    align-items: left;
-    flex-direction: row;
-    font-family: 'Montserrat';
-    font-style: normal;
-    bottom: 25rem;
+.amount span{
+    font-weight: 700;
+    font-size: 12px;
+}
+.amount img{
+    width: 30px;
+    height: 30px;
 }
 
-#texto21{
-    top: 25rem;
-    right: 10rem;
-    justify-content: left;
-    align-items: left;
-    flex-direction: row;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 36px;
-    line-height: 44px;
-    color: #E2AC24;
+.minus{
+    cursor: pointer;
+}
+.plus{
+    cursor: pointer;
 }
 
-#destaque{
-    display: inline-block;
-    color: #E2AC24;
-    vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px transparent;
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-property: box-shadow;
-    transition-property: box-shadow;
+
+.button{
+    display:inline-flex;
+    text-decoration: none;
+    color: #fff;
+    background-color: rgb(255, 225, 52);
+    padding: 10px 35px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    gap: 5px;
+    font-size: 12px;
+    font-weight: 700;
 }
 
-#destaque:hover, #destaque:focus, #destaque:active {
-    box-shadow: 0 0 8px #E2AC24;
+.button2{
+    display:inline-block;
+    text-decoration: none;
+    color: #fff;
+    background-color: rgb(255, 225, 52);
+    padding: 10px 35px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    gap: 5px;
+    font-size: 12px;
+    font-weight: 700;
 }
 
-#botao2{
-	padding: 10px;
-	width: 400px;
-    height: 50px;
-	border-radius: 50px;
-	border: none;
-	text-transform: uppercase;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 28px;
-    line-height: 34px;
-    text-align: center;
-    color: #2F2325;
-	background-color: #E2AC24;
-	cursor: pointer;
-    box-shadow: 0 0 5px #000;
-    margin-top: 30px;
-    margin-left: 15rem;
+.button img{
+    width: 14px;
+}
+
+.button2 img{
+    width: 19px;
 }
