--- a/StarterTCC/TCCApp/templates/cadastro.html
+++ b/StarterTCC/TCCApp/templates/cadastro.html
@@ -1,14 +1,18 @@
+{% load static %}
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Registrar</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+    <link rel="stylesheet" href="{% static 'css/cadastro.css'%}">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"> </script>
 </head>
 
 {% block body %}
 <body>
-    <section class="hero is-primary is-fullheight">
+    <section class="hero is-fullheight">
         <div class="hero-body">
             <div class="container">
                 <div class="columns is-centered">
@@ -30,7 +34,7 @@
 
                                 {% csrf_token %}
                                 <div class="field">
-                                    <label class="label">Usuário</label>
+                                    <label class="label has-text-light">Usuário</label>
                                     <p class="control has-icons-left has-icons-right">
                                       <input class="input" type="text" name="usuario" id="usuario" placeholder="Insira um usuario">
                                       <span class="icon is-small is-left">
@@ -42,7 +46,7 @@
                                     </p>
                                   </div>
                                   <div class="field">
-                                    <label class="label">Nome</label>
+                                    <label class="label has-text-light">Nome</label>
                                     <p class="control has-icons-left has-icons-right">
                                       <input class="input" type="text" name="nome" id="nome" placeholder="Insira um Nome">
                                       <span class="icon is-small is-left">
@@ -54,7 +58,7 @@
                                     </p>
                                   </div>
                                   <div class="field">
-                                    <label class="label">Email</label>
+                                    <label class="label has-text-light">Email</label>
                                     <p class="control has-icons-left has-icons-right">
                                       <input class="input" type="text" name="email" id="email" placeholder="Insira um Email">
                                       <span class="icon is-small is-left">
@@ -65,25 +69,26 @@
                                         </span>
                                     </p>
                                   </div>
-                                <div class="field">
-                                    <label class="label">Senha</label>
+                                <div class="field ">
+                                    <label class="label has-text-light">Senha</label>
                                     <p class="control has-icons-left">
-                                        <input class="input" type="password" name="senha" id="senha" placeholder="Senha">
+                                        <input class="input" type="password" name="senha" id="senha" onkeypress=verificaForcaSenha() minlength="6" maxlength="20" placeholder="Senha">
                                         <span class="icon is-small is-left">
                                             <i class="fas fa-lock"></i>
                                         </span>
                                     </p>
                                 </div>
                                 <div class="field">
-                                    <label class="label">Confirmar Senha</label>
+                                    <label class="label has-text-light">Confirmar Senha</label>
                                     <p class="control has-icons-left">
-                                        <input class="input" type="password" name="confirmarsenha" id="confirmarsenha" placeholder="Confirme sua Senha">
+                                        <input class="input" type="password" name="confirmarsenha" id="confirmarsenha" onkeypress=verificaForcaSenha() minlength="6" maxlength="20" placeholder="Confirme sua Senha">
                                         <span class="icon is-small is-left">
                                             <i class="fas fa-lock"></i>
                                         </span>
                                     </p>
+                                    <span id="password-status"></span>
                                 </div>
-                                <div class="field">
+                                <div class="field has-text-light">
                                     <p class="control">
                                         <button type="submit" class="button is-link is-hovered">
                                             Cadastrar
@@ -100,3 +105,34 @@
     </section>
 </body>
 {% endblock %}
+<script>
+    function verificaForcaSenha()
+    {
+    	var numeros = /([0-9])/;
+    	var alfabeto = /([a-zA-Z])/;
+    	var chEspeciais = /([~,!,@,#,$,%,^,&,*,-,_,+,=,?,>,<])/;
+
+    	  if($('#senha').val().length<6){
+    		$('#password-status').html("<span style='color:red'>Fraco, insira no mínimo 6 caracteres</span>");
+    	} else {
+    		if($('#senha').val().match(numeros) && $('#senha').val().match(alfabeto) && $('#senha').val().match(chEspeciais))
+    		{
+    			$('#password-status').html("<span style='color:green'><b>Forte</b></span>");
+    		} else {
+    			$('#password-status').html("<span style='color:orange'>Médio, insira um caracter especial</span>");
+    		}
+    	}
+
+    		if($('#confirmarsenha').val().length<6)
+    	{
+    		$('#password-status').html("<span style='color:red'>Fraco, insira no mínimo 6 caracteres</span>");
+    	} else {
+    		if($('#senha').val().match(numeros) && $('#senha').val().match(alfabeto) && $('#senha').val().match(chEspeciais))
+    		{
+    			$('#password-status').html("<span style='color:green'><b>Forte</b></span>");
+    		} else {
+    			$('#password-status').html("<span style='color:orange'>Médio, insira um caracter especial</span>");
+    		}
+    	}
+    }
+</script>
