--- a/StarterTCC/TCCApp/templates/login.html
+++ b/StarterTCC/TCCApp/templates/login.html
@@ -1,14 +1,17 @@
+{% load static %}
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Login </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+    <link rel="stylesheet" href="{% static 'css/cadastro.css'%}">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 
 {% block body %}
 <body>
-    <section class="hero is-link is-fullheight">
+    <section class="hero is-fullheight">
         <div class="hero-body">
             <div class="container">
                 <div class="columns is-centered">
@@ -31,7 +34,7 @@
 
                                 {% csrf_token %}
                                 <div class="field">
-                                    <label class="label">Usuário</label>
+                                    <label class="label has-text-light">Usuário</label>
                                     <p class="control has-icons-left has-icons-right">
                                         <input class="input" type="text" name="usuario" id="usuario" placeholder="Insira um nome de Usuário">
                                         <span class="icon is-small is-left">
@@ -43,7 +46,7 @@
                                     </p>
                                 </div>
                                 <div class="field">
-                                    <label class="label">Senha</label>
+                                    <label class="label has-text-light">Senha</label>
                                     <p class="control has-icons-left">
                                         <input class="input" type="password" name="senha" id="senha" placeholder="Senha">
                                         <span class="icon is-small is-left">
@@ -52,7 +55,7 @@
                                     </p>
                                 </div>
                                 <div class="field">
-                                    <p><a href="/password_reset">Lost password?</a></p>
+                                    <p><a class='label has-text-light' href="/password_reset">Lost password?</a></p>
                                     <p class="control">
                                         <button type="submit" class="button is-success is-hovered">
                                                 Login
